--- a/app/src/main/res/layout/simple_spinner_item.xml
+++ b/app/src/main/res/layout/simple_spinner_item.xml
@@ -18,9 +18,11 @@
 */
 -->
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@android:id/text1"
+    android:id="@+id/itemtext1"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:textSize="20sp"
-    android:textColor="#ff0000"
+    android:padding="5dp"
+    android:textColor="#000000"
+    android:background="#ffffff"
     android:text="item"/>
