--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -41,14 +41,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/categorySpinner"
-                android:spinnerMode="dropdown"
-                android:clickable="true"
                 android:layout_marginBottom="5dp"
                 android:layout_weight="10"
                 android:textColor="#000000"
                 android:background="#ffffff"
                 android:divider="#b5b5b5"
                 android:dividerHeight="1dp"
+                android:popupBackground="#ffffff"
                 />
             <ListView
                 android:layout_width="match_parent"
