--- a/app/src/main/res/layout/simple_spinner_dropdown_item.xml
+++ b/app/src/main/res/layout/simple_spinner_dropdown_item.xml
@@ -4,7 +4,7 @@
     style="?android:attr/spinnerDropDownItemStyle"
     android:singleLine="true"
     android:layout_width="match_parent"
-    android:layout_height="?android:attr/listPreferredItemHeight"
+    android:layout_height="wrap_content"
     android:ellipsize="marquee"
     android:textColor="#000000"
     android:background="#fff"
