--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -70,7 +70,7 @@
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
             android:textSize="40dp"
-            android:text="Table"
+            android:text="Pay and Move"
             android:id="@+id/tableButton"/>
         <Button
             android:layout_width="match_parent"
