--- a/app/src/main/res/layout/table_pay_and_change.xml
+++ b/app/src/main/res/layout/table_pay_and_change.xml
@@ -8,9 +8,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/EditTableEditText"
-        android:layout_weight="85"
-        android:layout_toLeftOf="@+id/DeleteTableButton"
+        android:id="@+id/Table_Pay_ChangeTextView"
+        android:layout_weight="80"
         android:singleLine="true"
         android:textColor="#000000"
         android:inputType="text"/>
@@ -19,9 +18,16 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Delete"
-        android:id="@+id/DeleteTableButton"
-        android:layout_weight="15"
-        android:layout_alignBottom="@+id/EditTableEditText"
+        android:text="Pay"
+        android:id="@+id/Table_PayButton"
+        android:layout_weight="10"
+        android:contentDescription="TableName" />
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Move"
+        android:id="@+id/Table_ChangeButton"
+        android:layout_weight="10"
         android:contentDescription="TableName" />
 </LinearLayout>
