Working with Dish_Details (done)
UI  of Dish_Details needs more modification
Delete button in Menu works well

--- a/app/src/main/res/layout/dish_details.xml
+++ b/app/src/main/res/layout/dish_details.xml
@@ -9,7 +9,7 @@
         android:paddingTop="@dimen/activity_horizontal_margin"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textAlignment="center"
-        android:text="Add New Dish"
+        android:text="Dish details"
         android:textStyle="bold"
         android:textSize="32sp"
         android:textColor="#ffffff"
@@ -122,8 +122,8 @@
             android:background="#FFC61717"
             android:textColor="#ffffff"
             android:textSize="35sp"
-            android:text="OK"
-            android:id="@+id/addDishButtonOK"
+            android:text="Save"
+            android:id="@+id/saveDishButtonOK"
             android:layout_gravity="center_horizontal"
             android:layout_weight="10"
             android:layout_marginRight="5dp"/>
