--- a/app/src/main/res/layout/order.xml
+++ b/app/src/main/res/layout/order.xml
@@ -1,73 +1,104 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="0dp"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.giao.OrderSystem.Order">
+    tools:context="com.giao.OrderSystem.Menu">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:weightSum="100"
-        android:background="#b1cef4">
+        android:background="#FFA4A8BE"
+        android:weightSum="100">
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="5"
-            android:background="#3f51B5">
-
+            android:layout_weight="10"
+            android:background="#3f51B5"
+            android:layout_gravity="top">
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="70dip"
                 android:paddingTop="@dimen/activity_horizontal_margin"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textAlignment="center"
-                android:text="Order"
+                android:text="Menu"
                 android:textStyle="bold"
-                android:textSize="32dp"
+                android:textSize="32sp"
                 android:textColor="#ffffff"
-                android:id="@+id/textView" />
+                android:id="@+id/SelectecItemtextView"
+                android:background="#3f51B5"
+                android:layout_gravity="top"/>
         </LinearLayout>
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="95"
+            android:layout_weight="90"
             android:gravity="center_horizontal"
             android:weightSum="100">
-
-                    <Spinner
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/spinner"
-                        android:layout_marginBottom="5dp"
-                        android:background="#ffffff"
-                        android:layout_weight="5"/>
-
-
-                    <ListView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/tableListView2"
-                        android:background="#ffffff"
-                        android:layout_weight="90"/>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-            <Button
+                android:layout_height="wrap_content"
+                android:layout_weight="15"
+                android:layout_marginBottom="5dp"
+                android:orientation="horizontal"
+                android:weightSum="5">
+            <Spinner
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:id="@+id/tableSpinner"
+                android:textColor="#000000"
+                android:background="#ffffff"
+                android:divider="#b5b5b5"
+                android:dividerHeight="1dp"
+                android:popupBackground="#ffffff"
+                android:layout_weight="4"/>
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="45dp"
+                    android:text="Order"
+                    android:id="@+id/orderButton"
+                    android:layout_weight="1"/>
+            </LinearLayout>
+            <ListView
                 android:layout_width="match_parent"
-                android:layout_height="45dip"
-                android:background="#FFC61717"
-                android:textColor="#ffffff"
-                android:textSize="35sp"
-                android:text="Home"
-                android:id="@+id/homeButton"
-                android:layout_gravity="center_horizontal"
-                android:layout_weight="10"/>
+                android:layout_height="match_parent"
+                android:id="@+id/orderListView"
+                android:background="#ffffff"
+                android:layout_weight="75"
+                android:isScrollContainer="false"
+                android:divider="#b5b5b5"
+                android:dividerHeight="1dp"/>
         </LinearLayout>
-        </LinearLayout>
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="10"
+            android:layout_gravity="bottom">
+            <TableRow>
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="45dip"
+                    android:background="#FFC61717"
+                    android:textColor="#ffffff"
+                    android:textSize="35sp"
+                    android:text="Add"
+                    android:id="@+id/addDishButton"
+                    android:layout_weight="1"/>
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="45dip"
+                    android:background="#FFC61717"
+                    android:textColor="#ffffff"
+                    android:textSize="35sp"
+                    android:layout_marginLeft="5dp"
+                    android:text="Home"
+                    android:id="@+id/homeButton"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_weight="1" />
+            </TableRow>
+        </TableLayout>
+
     </LinearLayout>
 </RelativeLayout>
