--- a/app/src/main/res/layout/order_info.xml
+++ b/app/src/main/res/layout/order_info.xml
@@ -9,7 +9,7 @@
         android:paddingTop="@dimen/activity_horizontal_margin"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textAlignment="center"
-        android:text="Dish details"
+        android:text="Order Information"
         android:textStyle="bold"
         android:textSize="32sp"
         android:textColor="#ffffff"
@@ -30,16 +30,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Category:"
+                android:text="Table:"
                 android:id="@+id/textView2"
                 android:layout_weight="15"/>
 
-            <Spinner
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Medium Text"
-                android:id="@+id/categorySpinner"
+                android:id="@+id/category_dishTextView"
                 android:layout_weight="85"/>
 
         </TableRow>
@@ -48,7 +48,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Dish Name:"
+                android:text="Date:"
                 android:id="@+id/textView3"
                 android:layout_weight="15"/>
 
@@ -64,7 +64,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Price:"
+                android:text="No Customer:"
                 android:id="@+id/textView4"
                 android:layout_weight="15" />
 
@@ -80,7 +80,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Description:"
+                android:text="Note:"
                 android:id="@+id/textView5"
                 android:layout_weight="15"
                 />
@@ -96,10 +96,10 @@
         </TableRow>
         <TableRow>
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Availability: "
+                android:text="Paid:"
                 android:id="@+id/textView6"
                 android:layout_weight="15" />
 
@@ -121,8 +121,8 @@
             android:background="#FFC61717"
             android:textColor="#ffffff"
             android:textSize="35sp"
-            android:text="Save"
-            android:id="@+id/saveDishButtonOK"
+            android:text="OK"
+            android:id="@+id/addDishButtonOK"
             android:layout_gravity="center_horizontal"
             android:layout_weight="10"
             android:layout_marginRight="5dp"/>
