--- a/app/src/main/res/layout/order.xml
+++ b/app/src/main/res/layout/order.xml
@@ -71,34 +71,21 @@
                 android:divider="#b5b5b5"
                 android:dividerHeight="1dp"/>
         </LinearLayout>
-        <TableLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="10"
-            android:layout_gravity="bottom">
-            <TableRow>
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="45dip"
-                    android:background="#FFC61717"
-                    android:textColor="#ffffff"
-                    android:textSize="35sp"
-                    android:text="Add"
-                    android:id="@+id/addDishButton"
-                    android:layout_weight="1"/>
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="45dip"
-                    android:background="#FFC61717"
-                    android:textColor="#ffffff"
-                    android:textSize="35sp"
-                    android:layout_marginLeft="5dp"
-                    android:text="Home"
-                    android:id="@+id/homeButton"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_weight="1" />
-            </TableRow>
-        </TableLayout>
+            android:layout_weight="10">
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="45dip"
+                android:background="#FFC61717"
+                android:textColor="#ffffff"
+                android:textSize="35sp"
+                android:text="Home"
+                android:id="@+id/homeButton"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="10"/>
+        </LinearLayout>
 
     </LinearLayout>
 </RelativeLayout>
