--- a/app/src/main/res/layout/tables.xml
+++ b/app/src/main/res/layout/tables.xml
@@ -26,7 +26,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_weight="10">
     <Button
         android:layout_width="match_parent"
         android:layout_height="45dip"
@@ -36,6 +37,6 @@
         android:text="Home"
         android:id="@+id/homeButton"
         android:layout_gravity="center_horizontal"
-        android:layout_weight="10"/>
+        />
     </LinearLayout>
 </LinearLayout>
