--- a/app/src/main/res/layout/order_info.xml
+++ b/app/src/main/res/layout/order_info.xml
@@ -103,10 +103,11 @@
                 android:id="@+id/textView6"
                 android:layout_weight="15" />
 
-            <EditText
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/totalEditText"
+                android:text="total"
                 android:layout_weight="85"/>
 
         </TableRow>
@@ -122,7 +123,7 @@
             android:textColor="#ffffff"
             android:textSize="35sp"
             android:text="OK"
-            android:id="@+id/addDishButtonOK"
+            android:id="@+id/orderInfoOK"
             android:layout_gravity="center_horizontal"
             android:layout_weight="10"
             android:layout_marginRight="5dp"/>
