--- a/app/src/main/res/layout/order_info.xml
+++ b/app/src/main/res/layout/order_info.xml
@@ -84,7 +84,6 @@
                 android:id="@+id/textView5"
                 android:layout_weight="15"
                 />
-
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -93,6 +92,15 @@
                 android:layout_gravity="clip_horizontal"
                 android:layout_weight="85"/>
 
+        </TableRow>
+        <TableRow>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Available"
+                android:id="@+id/availableTextView"
+                android:layout_weight="15"></TextView>
         </TableRow>
     </TableLayout>
 
@@ -108,7 +116,7 @@
             android:text="OK"
             android:id="@+id/orderInfoOK"
             android:layout_gravity="center_horizontal"
-            android:layout_weight="10"
+            android:layout_weight="3"
             android:layout_marginRight="5dp"/>
         <Button
             android:layout_width="match_parent"
@@ -116,9 +124,20 @@
             android:background="#FFC61717"
             android:textColor="#ffffff"
             android:textSize="35sp"
-            android:text="Cancel"
+            android:text="Delete"
+            android:id="@+id/orderInfoDELETE"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="3"
+            android:layout_marginRight="5dp"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="45dip"
+            android:background="#FFC61717"
+            android:textColor="#ffffff"
+            android:textSize="35sp"
+            android:text="Home"
             android:id="@+id/homeButton"
             android:layout_gravity="center_horizontal"
-            android:layout_weight="10"/>
+            android:layout_weight="3"/>
     </LinearLayout>
 </LinearLayout>
