--- a/app/src/main/res/layout/order_details_dish_layout.xml
+++ b/app/src/main/res/layout/order_details_dish_layout.xml
@@ -10,8 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Delete"
-        android:id="@+id/categoryButton"
-        android:contentDescription="CategoryName"
+        android:id="@+id/dishButton"
         android:paddingLeft="10dp"
         android:gravity="left"/>
 </LinearLayout>
