--- a/app/src/main/res/layout/order_view_layout.xml
+++ b/app/src/main/res/layout/order_view_layout.xml
@@ -10,6 +10,10 @@
         android:layout_weight="85"
         android:weightSum="100"
         android:orientation="horizontal">
+        <TextView
+            android:layout_width="1dp"
+            android:layout_height="1dp"
+            android:id="@+id/orderDetailIDTextView" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -18,13 +22,13 @@
         android:singleLine="true"
         android:textColor="#000000"
         android:inputType="text"
-        android:layout_weight="10"/>
+        android:layout_weight="10"
+        android:paddingLeft="10dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/dishNameTextView"
             android:singleLine="true"
-            android:layout_toLeftOf="@+id/subtotalTextView"
             android:textColor="#000000"
             android:layout_weight="70"/>
         <TextView
@@ -54,6 +58,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/noteTextView"
             android:inputType="textMultiLine"
-            android:textColor="#000000"/>
+            android:textColor="#FF0000"
+            android:paddingLeft="10dp"/>
     </LinearLayout>
 </LinearLayout>
