Create printing functionality
Connect to receipt printer via Bluetooth
Print Order
Print  message

--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -42,7 +42,7 @@
             android:layout_height="50dp"
             android:background="#FFC61717"
             android:textColor="#ffffff"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="30dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
             android:textSize="40dp"
@@ -54,7 +54,7 @@
             android:layout_height="50dp"
             android:background="#FFC61717"
             android:textColor="#ffffff"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="30dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
             android:textSize="40dp"
@@ -66,29 +66,40 @@
             android:layout_height="50dp"
             android:background="#FFC61717"
             android:textColor="#ffffff"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="30dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
             android:textSize="40dp"
             android:text="Pay and Move"
             android:id="@+id/tableButton"/>
         <Button
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="#FFC61717"
-            android:textColor="#ffffff"
-            android:layout_marginTop="50dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            android:textSize="40dp"
-            android:text="Setting"
-            android:id="@+id/settingButton"/>
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#FFC61717"
+        android:textColor="#ffffff"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:textSize="40dp"
+        android:text="Setting"
+        android:id="@+id/settingButton"/>
         <Button
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="#FFC61717"
             android:textColor="#ffffff"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:textSize="40dp"
+            android:text="Printer Setting"
+            android:id="@+id/printerSettingButton"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="#FFC61717"
+            android:textColor="#ffffff"
+            android:layout_marginTop="30dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
             android:textSize="40dp"
